/*
 * To change this template, choose Tools | Templates
 * and open the template in the editor.
 */
package constants;

/**
 *
 * @author
 * fvega
 */
public class ClassRelationTypes {
    public final static String DEPENDENCY = "-->";
    public final static String COMPOSITION = "*--";
    public final static String AGGREGATION = "o--";
    public final static String INHERITANCE = "<|--";
    public final static String IMPLMENTATION = "<|..";
    
}
