/*
 * To change this template, choose Tools | Templates
 * and open the template in the editor.
 */
package constants;

/**
 *
 * @author
 * fvega
 */
public class ClassTypes {
    public final static String ABSTRACT = "abstract";
    public final static String INTERFACE = "interface";
    public final static String CONCRETE = "class";
}
