/*
 * To change this template, choose Tools | Templates
 * and open the template in the editor.
 */
package constants;

/**
 *
 * @author
 * fvega
 */
public class ClassVisibilityTypes {
    public static final String PRIVATE = "-";
    public static final String PUBLIC = "+";
    public static final String PROTECTED = "#";
    
}
